improving tests